form alignment fix

--- a/src/assets/styles/_contact-form.scss
+++ b/src/assets/styles/_contact-form.scss
@@ -5,7 +5,7 @@
   position: relative;
   margin: auto;
 
-  @media (#{$bp-larger-than-phablet}){
+  @media (#{$bp-larger-than-desktop}){
     margin-right: 15%;
   }
 
